feat: add download manager, CS2 path detector, debug console, improve UI and server management

--- a/src/CSP2.Desktop/CSP2.Desktop.csproj
+++ b/src/CSP2.Desktop/CSP2.Desktop.csproj
@@ -4,9 +4,11 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <UseWindowsForms>true</UseWindowsForms>
     <LangVersion>12</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
