feat: add plugin repository as submodule and update URLs
- Add csp2-plugin-repository as git submodule
- Update plugin repository URLs to use yichen11818 GitHub account
- Configure .gitignore for plugin-repository generated files
- Enable GitHub directory navigation support

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,9 @@ CLAUDE.md
 
 ## Cursor IDE
 .cursor/
+
+## Plugin Repository (子项目)
+plugin-repository/node_modules/
+plugin-repository/package-lock.json
+plugin-repository/manifest.json
+plugin-repository/*.log
