feat: add hot reload support and enhance UI layout
- Configured hot reload functionality in the project for improved development efficiency.
- Updated README.zh-CN.md to include instructions for using hot reload.
- Adjusted margins and paddings in MainWindow.xaml and PluginMarketPage.xaml for better UI consistency and spacing.

--- a/src/CSP2.Desktop/CSP2.Desktop.csproj
+++ b/src/CSP2.Desktop/CSP2.Desktop.csproj
@@ -9,6 +9,13 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    
+    <!-- 启用 Hot Reload 功能 -->
+    <EnableHotReload>true</EnableHotReload>
+    <HotReloadEnabled>true</HotReloadEnabled>
+    
+    <!-- XAML Hot Reload 优化 -->
+    <XamlDebuggingInformation>true</XamlDebuggingInformation>
   </PropertyGroup>
 
   <ItemGroup>
